# AutoPylot

./: .gitignore  README.md  docker-compose.yml
server/: Dockerfile  pyproject.toml
server/src/: api.py  main.py
