[tool.poetry]
name = "AutoPylot-server"
version = "0.1.0"
description = ""
authors = ["wintersalmon <wintersalmon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
